@@ -3,6 +3,10 @@
 	* tests/utilities.R: Gaming coverage metrics by adding more calls
 	* tests/allFormats.R: Ditto
 
+	* src/anytime.cpp (anytime_cpp): Condition use of Rcpp::stop() on
+	having Rcpp 0.12.8.1 or later as 0.12.7 and 0.12.8 had a bug tickled
+	under older g++ versions such as Ubuntu 14.04 one used by Travis CI 
+
 2016-11-25  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml (after_success): Launch coverage analysis
